--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     </form>
     <hr>
   {{/if}}
-
+  <a href="/auth/github">LogIn with github</a>
   <form action="/" method="post">
     <input type="text" name="username" id="">
     <input type="password" name="password" id="">
