--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Yuji+Mai&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Yuji+Mai&display=swap');
 /* 中央寄せ */
 .main-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .header {
@@ -15,7 +15,7 @@
     text-align: center;
     margin-bottom: 1rem;
     /* googlefont */
-    font-family: "Yuji Mai", serif;
+    font-family: 'Yuji Mai', serif;
     font-weight: 400;
     font-style: normal;
 }
