--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,23 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Yuji+Mai&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Yuji+Mai&display=swap");
+body {
+    margin: 0;
+}
 /* 中央寄せ */
 .main-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-}
 
-.header {
-    font-size: 2rem;
-    background-color: black;
-    color: aliceblue;
-    width: 100vh;
-    text-align: center;
-    margin-bottom: 1rem;
-    /* googlefont */
-    font-family: 'Yuji Mai', serif;
-    font-weight: 400;
-    font-style: normal;
+    /*  */
+    height: 100vh;
 }
 
 /* !サーチバー */
