--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,7 +8,6 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-
     /*  */
     height: 100vh;
 }
@@ -16,6 +15,7 @@ body {
 /* !サーチバー */
 .search-bar {
     margin-bottom: 0.1rem;
+    margin-top: 1rem;
 }
 
 /* ゴミ捨て詳細 */
