--- a/frontend/src/compronents/signin.css
+++ b/frontend/src/compronents/signin.css
@@ -1,3 +1,7 @@
+a {
+    text-decoration: none;
+    color: inherit;
+}
 .site-nav {
     display: flex;
     gap: 30px;
@@ -5,8 +9,9 @@
     margin: 10px auto;
 }
 
-.site-nav img {
-    width: 40px;
-    height: 40px;
+.site-nav .icon {
+    width: auto;
+    height: 35px;
     border-radius: 50%;
+    color: burlywood;
 }
