--- a/frontend/src/compronents/Header.css
+++ b/frontend/src/compronents/Header.css
@@ -6,9 +6,9 @@
     text-align: center;
     padding: 0 2%;
     /* googlefont */
-    font-family: "Yuji Mai", serif;
+/*     font-family: "Yuji Mai", serif;
     font-weight: 400;
-    font-style: normal;
+    font-style: normal; */
 
     /*  */
     display: flex;
