--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Yuji+Mai&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Yuji+Mai&display=swap"); */
 body {
     margin: 0;
 }
