--- a/frontend/src/compronents/Header.css
+++ b/frontend/src/compronents/Header.css
@@ -1,6 +1,6 @@
 .header {
     font-size: 2rem;
-    background-color: b33e5c;
+    background-color: #b33e5c;
     color: aliceblue;
     width: 100vws;
     text-align: center;
