--- a/frontend/src/compronents/signin.css
+++ b/frontend/src/compronents/signin.css
@@ -2,6 +2,12 @@ a {
     text-decoration: none;
     color: inherit;
 }
+p {
+    padding-top: 50px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+}
 .site-nav {
     display: flex;
     gap: 30px;
